# Clas12Tool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.hipo3  CMakeLists.txt.hipo4  Makefile  README.md  installHipo3  installHipo4  testTreeMaker.C
Banks/: Makefile  calorimeter.h  calorimeter_cpp_ACLiC_dict_rdict.pcm  cherenkov.h  cherenkov_cpp_ACLiC_dict_rdict.pcm  clas12defs.h  clas12event.cpp  clas12event.h  clas12reader.cpp  covmatrix.cpp  covmatrix.h  detector.cpp  detector.h  forwardtagger.cpp  forwardtagger.h  forwardtagger_cpp_ACLiC_dict_rdict.pcm  hallB_event.cpp  hallB_event.h  header.cpp  header.h  header_cpp_ACLiC_dict_rdict.pcm  mcparticle.cpp  mesonex_event.cpp  mesonex_event.h  mesonex_event_cpp_ACLiC_dict_rdict.pcm  particle.cpp  particle.h  particle_cpp_ACLiC_dict_rdict.pcm  particle_detector.cpp  particle_detector.h  particle_detector_cpp_ACLiC_dict_rdict.pcm  region_cdet.cpp  region_cdet.h  region_fdet.cpp  region_fdet.h  region_ft.cpp  region_ft.h  region_particle.cpp  region_particle.h  scaler.h  (+6 more)
C12AnCpp/: Makefile  README.md  setEnv.csh  setEnv.sh
C12AnCpp/Clas12/: Makefile
C12AnCpp/Clas12/inc/: hipoReader.h  protoParticle.h  protoParticleReader.h  recEvent.h  recEventReader.h  recTrack.h  recTrackReader.h
C12AnCpp/Clas12/src/: hipoReader.cpp  protoParticleReader.cpp  recEventReader.cpp  recTrack.cpp  recTrackReader.cpp
C12AnCpp/Core/: Makefile
C12AnCpp/Core/inc/: algContainer.h  algorithm.h  dataReader.h  dataWriter.h  hist.h  manager.h  objContainer.h  objMap.h  objVector.h  object.h  outObjMgr.h  protoParticle.h  tuple.h
C12AnCpp/Core/src/: algorithm.cpp  hist.cpp  manager.cpp  outObjMgr.cpp  tuple.cpp
C12AnCpp/Examples/: Makefile  h.root  histogram.h  of.txt  test.cpp
C12AnCpp/Examples/ex01/: Makefile  ex01.cpp  ex01_alg.cpp  ex01_alg.h
C12AnCpp/Examples/ex02/: Makefile  ex02.cpp  ex02_alg.cpp  ex02_alg.h
C12AnCpp/Examples/ex_lund/: Makefile  ex_lund.cpp  ex_lund_alg.cpp  ex_lund_alg.h
C12AnCpp/Lund/: Makefile
C12AnCpp/Lund/inc/: lundReader.h  protoParticle.h  protoParticleMaker.h
C12AnCpp/Lund/src/: lundReader.cpp  protoParticleMaker.cpp
C12AnCpp/Root/: Makefile
C12AnCpp/Root/inc/: particle.h  particleMaker.h  rHist.h  rTuple.h  rootOutObjMgr.h
C12AnCpp/Root/src/: particle.cpp  particleMaker.cpp  rHist.cpp  rTuple.cpp  rootOutObjMgr.cpp
C12AnCpp/Tools/: Makefile
C12AnCpp/Tools/inc/: combineParticles.h  kineTool.h  utils.h
C12AnCpp/Tools/src/: utils.cpp  (+2 more)
Clas12Banks/: CMakeLists.txt  calorimeter.h  clas12event.h  clas12reader.h  covmatrix.h  mcparticle.h  particle.cpp  region_cdet.h  scintillator.cpp  vtp.cpp
Clas12Banks3/: CMakeLists.txt  Clas12LinkDef.h  calorimeter.cpp  cherenkov.cpp  clas12reader.cpp  covmatrix.cpp  covmatrix.h  hallB_event.h  mesonex_event.h  particle.h  particle_detector.cpp  particle_detector.h  region_fdet.h  region_ft.h  region_particle.cpp  region_particle.h  scaler.cpp  scintillator.h  tracker.cpp  traj.cpp  traj.h  vtp.h
Clas12Banks4/: CMakeLists.txt  Clas12LinkDef.h  bankreader.cpp  bankreader.h  calorimeter.h  cherenkov.cpp  cherenkov.h  clas12defs.h  clas12reader.cpp  clas12reader.h  covmatrix.h  forwardtagger.cpp  forwardtagger.h  hallB_event.cpp  hallB_event.h  header.cpp  header.h  mcparticle.h  mesonex_event.cpp  particle.cpp  particle.h  particle_detector.cpp  particle_detector.h  raw.cpp  raw.h  region_fdet.cpp  scaler.h  scintillator.h  tracker.cpp  tracker.h  traj.cpp  traj.h  vectors.cpp  vectors.h
Clas12Root/: BankHist.cpp  CMakeLists.txt  HipoHist.cpp  HipoROOTOut.cpp  HipoROOTOut.h  HipoSelector.cpp  HipoSelector.h  HipoTreeMaker.cpp  HipoTreeMaker.h  ParticleHist.cpp  ParticleTree.cpp  ParticleTree.h  tempHipoSelector.cpp  tempHipoSelector.h  templateBankHistAction.C  templateParticleTreeAction.C
Clas12Root/src/: #clas12proof4.cpp#  .#clas12proof4.cpp  CMakeLists.txt  clas12proof4.cpp  particleDraw.cpp  particleDraw3.cpp  particleDraw4.cpp  particleTree.cpp  particleTree3.cpp  particleTree4.cpp
ClasBanks/: TEVNTClass.cc  TEVNTClass.h  TEVNTClassLinkDef.h
Examples/: Makefile  analysis  analysis.cc  clas12event_example  clas12event_example.cc  mesonexevent_example  mesonexevent_example.cc  readBanks  readBanks.cc  readEvents.cc  readParticles  readParticles.cc  readRecords.cc  schema.cc  writeFile.cc
Hipo/: CMakeLists.txt  Clas12RootLinkDef.h  Makefile  bank.cpp  bank.h  dictionary.cpp  dictionary.h  event.cpp  event.h  node.cpp  node.h  reader.cpp  reader.h  record.cpp  record.h  utils.cpp  utils.h
Hipo3/: CMakeLists.txt  HipoLinkDef.h  Makefile  bank.cpp  dictionary.cpp  event.cpp  event.h  node.h  reader.h  wrapper.cpp
Hipo4/: CMakeLists.txt  bank.cpp  bank.h  dictionary.cpp  dictionary.h  event.cpp  event.h  reader.cpp  reader.h  record.cpp  record.h  recordbuilder.cpp  recordbuilder.h  utils.cpp  utils.h  wrapper.cpp  writer.cpp
Lz4/lib/: Makefile
RunRoot/: CleanROOT.C  CleanROOT.C~  DrawCovMat.C  Ex1_CLAS12Reader.C  Ex2_HipoDraw.C  Ex4_TreeMaker.C  Ex_PyNotebook.ipynb  HallBCheckTimeAlignment.C  HallBEvent.C  HipoSlowDown  LoadClas12Root.C  LoadClas12Root3.C  LoadClas12Root4.C  LoadProofLib4.C  MesonexEvent.C  MesonexEventHist.C  MesonexEventHist.C~  MesonexEventTree.C  MesonexEventTree.C~  MesonexEvent_C_ACLiC_dict_rdict.pcm  NOTES  README  README~  RegionFDET.C  RegionFT.C  importToROOT.C  importToROOT.C~  importToROOT2.C
RunRoot/hiporoot/: BankHist.C  BankHist.h  HipoChain.C  HipoChain.h  HipoFileSelector.C  HipoFileSelector.h  HipoHist.C  HipoHist.h  HipoHistAction.C  HipoROOTOut.C  HipoROOTOut.h  HipoRootAction.C  HipoRootAction.h  HipoSelector.C  HipoSelector.h  HipoTreeMaker.C  HipoTreeMaker.h  LoadHipoROOT.C  ParticleHist.C  ParticleHist.h  ParticleHistAction.C  ParticleTree.C  ParticleTree.h  hipotree.C  hipotree.h  templateBankHistAction.C  templateParticleHistAction.C  templateParticleTreeAction.C
RunRoot/jupy/: CLAS12Reader3Pi.C  CLAS12Reader3Pi.ipynb  HipoDraw.ipynb  HipoProof.ipynb  HipoToRootTree.ipynb
Utils/: Makefile  Write_ROOT_Dst.cxx  freader.cc  fwriter.cc  showDictionary.cc  writeROOT.cc
cmake/: FindROOT.cmake
